# xarm6_mpc

./: .gitignore  README.md  build_cpp_all.sh  mujoco_viewer.py  requestment.txt  requirements.txt
cpp_backend/: README.md  __init__.py  reach_ddp_xarm6_cpp.py
cpp_backend/native/: CMakeLists.txt  build.sh
cpp_backend/native/build_lowmem/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_backend/native/build_o0/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_backend/native/src/: ddp_reach_solver.cpp  module_bindings.cpp  nmpc_native.cpp  render_nmpc_runner.cpp  render_step_controller.cpp  render_tools.cpp  run_nmpc.cpp
cpp_backend/native/src/nmpc_native/: ddp_reach_solver.hpp  render_nmpc_runner.hpp  render_step_controller.hpp  render_tools.hpp  run_nmpc.hpp
example/: MUJOCO_LOG.TXT  README.md  _legacy_redirect.py  finger.py  ic_test.py  ik_test.py  reach_mpc_xarm6_nmpc.py  reach_mpc_xarm6_nmpc_cpp.py  reach_mpc_xarm6_nmpc_native.py  shadow_test.py  xarm_mujoco.py
legacy/: README.md
legacy/cpp_backend/: reach_ddp_xarm6_cpp.py
legacy/example/: bullet_ic.py  finger.py  reach_mpc.py  reach_mpc_xarm6_nmpc.py  reach_mpc_xarm6_nmpc_native.py  xarm_mujoco.py
legacy/mpc/solver/: reach_ddp.py
mpc/: __init__.py
mpc/solver/: __init__.py  reach_ddp.py  reach_ddp_xarm6.py
mpc/utils/: action.py
ufactory_xarm6/: scene.xml  xarm6.xml  xarm6_nohand.xml  xarm6_nohand_general.xml  xarm6_nohand_motor.xml  xarm6_nohand_position.xml  xarm6_nohand_velocity.xml  xarm6_robot.urdf  xarm7.xml  xarm7_nohand.xml
ufactory_xarm6/assets/: NewEGripper.STL
ur5e_mj/: ur5e.xml
utils/: robot_utils.py  visualizer.py
xarm_description/robots/: xarm7.urdf  xarm7_with_gripper.urdf
xarm_description/xarm_mj/: xarm7_nohand.xml
